tke-to-community-ingress/nginx-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  annotations:
    kubernetes.io/ingress.class: test
    kubernetes.io/ingress.rule-mix: "false"
spec:
  rules:
    - host: a.com
      http:
        paths:
          - backend:
              service:
                name: nginx-demo-svc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
